--- a/gobotany/static/sass/_partner.scss
+++ b/gobotany/static/sass/_partner.scss
@@ -81,6 +81,7 @@ header.partner-site {
                 font-size: 14px;
                 left: 43px;
                 top: 36px;
+                width: 200px;
             }
         }
     }
